--- a/templates/checkout/rental_success.html
+++ b/templates/checkout/rental_success.html
@@ -19,7 +19,7 @@
                         </div>
                         {% endfor %}
 
-                        <strong>Amount paid:</strong>
+                        <strong>Amount paid so far:</strong>
                         <span>£{{rental_total | floatformat:2}}</span>
                         <div class="pt-2">We have sent you an email with all the booking information</div>
                         <div class="mt-5">
