Add cancelation info

--- a/templates/administrator/administrator.html
+++ b/templates/administrator/administrator.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <!-- show Total rentals bookings -->
-        <div class="card text-center color-rental">
+        <!-- <div class="card text-center color-rental">
             <div class="card-header">
                 <h5 class="card-title text-white">Today Rental bookings</h5>
             </div>
@@ -28,7 +28,7 @@
                 <h3 class="card-title text-white">0</h3>
                 {% endif %}
             </div>
-        </div>
+        </div> -->
         <!-- show Total excursions bookings -->
         <div class="card text-center text-white color-excursion">
             <div class="card-header">
@@ -163,8 +163,8 @@
     </div>
     <hr>
     <!--------------------------------------------------------- rentals sections -->
-    <div id="rental_booking_section">
-        <!-- today excursions bookings admin -->
+      <!-- today excursions bookings admin -->
+    <!-- <div id="rental_booking_section">
         <h4 class="text-center mt-5">Today rental Bookings <span
                 class="badge bg-site-color">{{today_rental_bookings.count}}</span></h4>
         <div class="table_wrapper table-responsive">
@@ -201,10 +201,10 @@
                 </tr>
                 {% endfor %}
             </table>
-        </div>
+        </div> -->
 
-        <!-- Future excursions bookings -->
-        <h4 class="text-center mt-5">Future Rental Bookings <span
+        <!-- Future Rental Bookings-->
+        <!-- <h4 class="text-center mt-5">Future Rental Bookings <span
                 class="badge bg-site-color">{{future_rental_bookings.count}}</span></h4>
         <div class="table_wrapper table-responsive">
             <table class="data_table">
@@ -242,9 +242,9 @@
             </table>
         </div>
 
-
-        <!-- Previous excursions bookings -->
-        <h4 class="text-center mt-5">Previous Rental Bookings <span
+ -->
+        <!-- Previous Rental Bookings -->
+        <!-- <h4 class="text-center mt-5">Previous Rental Bookings <span
                 class="badge bg-site-color">{{previous_rental_bookings.count}}</span></h4>
         <div class="table_wrapper table-responsive">
             <table class="data_table">
@@ -281,7 +281,7 @@
                 {% endfor %}
             </table>
         </div>
-    </div>
+    </div> -->
 </div>
 
 {% endblock content %}
