--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -122,6 +122,9 @@
                                 <a class="dropdown-item" href="{% url 'administrator' %}">
                                     <i class="fa-solid fa-toolbox"></i> Admin board</a>
                             </li>
+                            <li><a class="dropdown-item" href="{% url 'excursion-bookings' %}">
+                                <i class="fa-solid fa-book-circle-arrow-up"></i> Excursion Bookings</a>
+                            </li>
                             {% else %}
                             <li><a class="dropdown-item" href="{% url 'excursion-bookings' %}">
                                     <i class="fa-solid fa-book-circle-arrow-up"></i> Excursion Bookings</a>
