delte administaror rental link

--- a/templates/administrator/administrator_base.html
+++ b/templates/administrator/administrator_base.html
@@ -61,10 +61,10 @@
                         <a class="nav-link" href="{% url 'admin-excursion' %}"> <i class="fa-solid fa-compass"></i>
                             Excursions</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="{% url 'admin-rental' %}"><i class="fa-solid fa-bed"></i>
                             Rentals</a>
-                    </li>
+                    </li> -->
                     {% if not user.is_authenticated %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
