Delete reference from footer

--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -281,9 +281,9 @@
             </div>
         </div>
 
-        <div class="referecia" style="color:white">
+        <!-- <div class="referecia" style="color:white">
             <a aria-label="tiktok" rel="reference" target="_blank" href="{% url 'reference' %}">Referencia</a>
-        </div>
+        </div> -->
 
     </footer>
 
