fix genrator code, in model, make migrations, add seller link in seller

--- a/templates/administrator/seller.html
+++ b/templates/administrator/seller.html
@@ -6,6 +6,13 @@
 <!-- header and card section -->
 <section>
     <h1 class="text-center mt-5">Administration for sellers</h1>
+    <div class="text-center mt-5">
+        <a href="{% url 'reference'%}"><button type="button" class="btn user_button_sm my_hover"><i
+                    class="fa-solid fa-plus"></i> Create Seller</button></a>
+    </div>
+
+
+    <!-- {% url 'reference' %} -->
     <div class="card-admin-wrapper_seller">
         <!-- show Total Users -->
         <div class="card text-center color-user">
