--- a/templates/cart/excursions_cart.html
+++ b/templates/cart/excursions_cart.html
@@ -44,8 +44,8 @@
                                 {% csrf_token %}
                             
                                 <!-- excursion date-->
-                                <td><input type="date" class="form-control" name="excursion_date"
-                                    value="{{item.values.excursion_date}}" min="{{today}}"></td>
+                                <td><input type="text" class="form-control" name="excursion_date"
+                                    value="{{item.values.excursion_date}}" min="{{today}}" readonly></td>
 
                              <!-- Times availables -->
                                 
@@ -163,5 +163,26 @@
         </div>
     </div>
 </section>
+<script>
+    $(function() {
+      // Define an array of days to disable (0 = Sunday, 1 = Monday, etc.)
+      var disabledDays = '{{unavailableDay}}'; // Disables Sunday and Saturday
+      console.log('disabledDays', disabledDays)
+
+      $("#date").datepicker({
+        beforeShowDay: function(date) {
+          var day = date.getDay(); // Get the day of the week (0 - 6)
+          // Disable days specified in the array
+          return [disabledDays.indexOf(day) === -1, ""]; // [disable/enable, CSS class]
+        }
+      });
+    $(function() {
+      $("#date").datepicker({
+        showAnim: "drop" // Apply the "drop" effect permanently
+      });
+    });
+
+    });
+</script>
 {% include 'excursions/includes/delete_cart_item_script.html' %}
 {% endblock content %}
