--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -39,6 +39,10 @@
     <link rel="icon" type="image/png" sizes="512x512" href="{% static 'images/favicon/android-chrome-512x512.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon/favicon-16x16.png' %}">
+    <!-- jquery -->
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <!-- Local stylesheets -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
 </head>
@@ -122,9 +126,7 @@
                                 <a class="dropdown-item" href="{% url 'administrator' %}">
                                     <i class="fa-solid fa-toolbox"></i> Admin board</a>
                             </li>
-                            <li><a class="dropdown-item" href="{% url 'excursion-bookings' %}">
-                                <i class="fa-solid fa-book-circle-arrow-up"></i> Excursion Bookings</a>
-                            </li>
+                            
                             {% else %}
                             <li><a class="dropdown-item" href="{% url 'excursion-bookings' %}">
                                     <i class="fa-solid fa-book-circle-arrow-up"></i> Excursion Bookings</a>
@@ -291,9 +293,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
+
     <!-- jQuery -->
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.js"></script> -->
+    <!-- <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
-        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script> -->
     <!-- Local Javascript -->
     <script src="{% static 'js/script.js' %}"></script>
 </body>
