--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -7,7 +7,7 @@
 {% block content %}
 <section>
     <div class="detail-container">
-        <h1 class="detail-title">{{excursions.title}} {{unavailableDay}}</h1>
+        <h1 class="detail-title">{{excursions.title}}</h1>
         <div class="item-detail-and-image-container">
             <!-- main image -->
             <div class="image-container">
