--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -153,9 +153,9 @@
                             href="{% url 'excursion-cart' %}">
                             <i class="fa-solid fa-cart-shopping"></i>
                             {% if total %}
-                            £{{total | floatformat:2}}
+                            ${{total | floatformat:2}}
                             {% else %}
-                            £0.00
+                            $0.00
                             {% endif %}
                         </a>
                     </li>
