--- a/templates/administrator/administrator_base.html
+++ b/templates/administrator/administrator_base.html
@@ -98,6 +98,10 @@
                         <a class="nav-link" href="{% url 'home' %}"><i class="fa-solid fa-house-user"></i></i> Customer
                             Home Page</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'pageVisit' %}"><i class="fa-solid fa-house-user"></i></i> pageVisit</a>
+                    </li>
+
                 </ul>
             </div>
         </div>
