--- a/templates/excursions/success_page.html
+++ b/templates/excursions/success_page.html
@@ -13,8 +13,8 @@
     </p>
     <div class="subcontainer">
         <h3>Discount code</h3>
-        <P class="reference_code"> <span class="badge rounded-pill bg-success">{{ reference_number }}</P>
-        <spa>Scan the barcode first, and then apply the discount code prior to finalizing your checkout..</spa>
+        <P class="reference_code"> <span class="badge rounded-pill bg-success" style="font-size: 40px;" >{{ reference_number }}</P>
+        <spa style="font-size: 27px; font-weight: bolder;">Scan the barcode first, and then apply the discount code prior to finalizing your checkout.</spa>
     </div>
         <img id="img_container" src="{% static 'images/excursions/Descuento.png' %}" alt="Italian Trulli">
     </div>
