Update the meta kewords

--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -17,12 +17,7 @@
     during a full-day tour from Punta Cana. Board a small speedboat for the thrilling ride out to the island, 
     including a stop at a natural swimming pool where you can see starfish. low price. ">
 
-    <meta name="keywords" content="punta cana, overseas adventure, the adventure travelers, 2023, backpacking tours,explore tours,  adventure vacations, biking tours,adventure travel, bavaro, rent, room,excursions,Visit Saona Island,
-    blue Caribbean, natural swimming pool, beautiful rooms, rent a whole apartment,
-     Day Trip, things to do in puntacana, puntacana tours, Scape Park Punta Cana,
-      Scape Park Punta Cana, Wild Buggy Eco Adventure, Full Safari Zipline, 
-      Buggies & Horse Riding, Hoyo Azul y Scape Park Cap Cana,Excursión de un día a isla Saona, Punta Cana Off-Road Dune, Buggy Adventure, Amazing Water Cave,tours, 
-      Horseback Riding, City Tour, Cacao Farm,  Zipline / Dune Buggy">
+    <meta name="keywords" content="punta cana, overseas adventure, the adventure travelers, 2023, backpacking tours,explore tours, vacations, biking tours,adventure travel, bavaro,excursions,Visit Saona Island, blue Caribbean, natural swimming pool, Day Trip, things to do in puntacana, puntacana Scape Park Punta Cana, Wild Buggy Eco Adventure, Full Safari Zipline, Buggies & Horse Riding, Hoyo Azul y Cap Cana,Excursión de un día isla Saona, Cana Off-Road Dune, Amazing Water Cave,tours, Horseback City Tour, Cacao Farm, Zipline / Dune Full-Day Catalina Island Snorkeling Tour Ecological Riding Paradise, Diving: Certification Required, Scuba Diving Adventure: Certified Experience, with Altos Chavon - All Inclusive, Santo Domingo Colonial Samaná Cayo Levantado and Cascada Limón, Playa Rincon Levantado, Los Haitises National Montana Redonda, River Lunch">
     <meta name="author" content="Gerson De La Cruz">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="canonical" href="https://myonlinerecipes.herokuapp.com/">
